# app/Http/Controllers/MovieCharacterController.php
@@ -45,9 +45,9 @@ class MovieCharacterController extends ApiController
      *          )
      *      ),
      *      @OA\Response(
-     *          response=503,
-     *          description="Service Unavailable: If the service is not available to process request",
-     *          @OA\JsonContent(ref="#/components/schemas/Error503")
+     *          response=500,
+     *          description="Internal Server Error: If the service is not available to process request",
+     *          @OA\JsonContent(ref="#/components/schemas/Error500")
      *      ),
      *      @OA\Response(
      *          response=404,
@@ -104,9 +104,9 @@ class MovieCharacterController extends ApiController
      *          )
      *      ),
      *      @OA\Response(
-     *          response=503,
-     *          description="Service Unavailable: If the service is not available to process request",
-     *          @OA\JsonContent(ref="#/components/schemas/Error503")
+     *          response=500,
+     *          description="Internal Server Error: If the service is not available to process request",
+     *          @OA\JsonContent(ref="#/components/schemas/Error500")
      *      ),
      *      @OA\Response(
      *          response=404,
