# app/Http/Controllers/MovieCommentController.php
@@ -45,9 +45,9 @@ class MovieCommentController extends ApiController
      *          )
      *      ),
      *      @OA\Response(
-     *          response=503,
-     *          description="Service Unavailable: If the service is not available to process request",
-     *          @OA\JsonContent(ref="#/components/schemas/Error503")
+     *          response=500,
+     *          description="Internal Server Error: If the service is not available to process request",
+     *          @OA\JsonContent(ref="#/components/schemas/Error500")
      *      ),
      *      @OA\Response(
      *          response=404,
@@ -115,9 +115,9 @@ class MovieCommentController extends ApiController
      *          @OA\JsonContent(ref="#/components/schemas/Error422")
      *      ),
      *      @OA\Response(
-     *          response=503,
-     *          description="Service Unavailable: If the service is not available to process request",
-     *          @OA\JsonContent(ref="#/components/schemas/Error503")
+     *          response=500,
+     *          description="Internal Server Error: If the service is not available to process request",
+     *          @OA\JsonContent(ref="#/components/schemas/Error500")
      *      ),
      *      @OA\Response(
      *          response=404,
@@ -172,9 +172,9 @@ class MovieCommentController extends ApiController
      *          )
      *      ),
      *      @OA\Response(
-     *          response=503,
-     *          description="Service Unavailable: If the service is not available to process request",
-     *          @OA\JsonContent(ref="#/components/schemas/Error503")
+     *          response=500,
+     *          description="Internal Server Error: If the service is not available to process request",
+     *          @OA\JsonContent(ref="#/components/schemas/Error500")
      *      ),
      *      @OA\Response(
      *          response=404,
